<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="musclesIsVisible"
            type="Boolean" />
        <variable
            name="viewModel"
            type="com.companion.android.trainingcompanion.viewmodels.StartViewModel" />

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="500dp"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/buttonsLinearLayout"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/button_dialog_cancel"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_accept"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/button_dialog_accept"
                app:cornerRadius="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trainingPlaceLinearLayout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/trainingPlaceView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/select_training_place"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/placeSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/content_description_spinner" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/body_part_selector"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_select_body_part"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="@+id/timeSliderDescription"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/timeSliderDescription"
            app:layout_constraintTop_toBottomOf="@+id/timeSlider"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/muscles_selector"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:hint="@string/hint_select_muscles"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="@{musclesIsVisible ? View.VISIBLE : View.GONE}"
            app:drawableEndCompat="@drawable/ic_arrow_drop_down"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="@+id/body_part_selector"
            app:layout_constraintStart_toStartOf="@+id/body_part_selector"
            app:layout_constraintTop_toBottomOf="@id/body_part_selector"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:text="@string/title_start_workout"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.slider.Slider
            android:id="@+id/timeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/content_description_slider"
            android:stepSize="5.0"
            android:valueFrom="15.0"
            android:valueTo="240.0"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="@+id/timeSliderDescription"
            app:layout_constraintStart_toStartOf="@+id/timeSliderDescription"
            app:layout_constraintTop_toBottomOf="@+id/timeSliderDescription"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timeSliderDescription"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:text="@string/description_time_slider"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="@+id/trainingPlaceLinearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/trainingPlaceLinearLayout"
            app:layout_constraintTop_toBottomOf="@+id/trainingPlaceLinearLayout"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:freezesText="false"
            android:minHeight="48dp"
            android:text="@{!viewModel.timerOnlyVibrate? @string/switch_with_sound: @string/switch_without_sound}"
            app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
            app:layout_constraintEnd_toEndOf="@+id/timeSlider"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/timeSlider"
            app:layout_constraintTop_toBottomOf="@+id/body_part_selector"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>